-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
dev
-
None
-
-
ea6abe583 (dev)
https://codereview.qt-project.org/c/qt/qtbase/+/511801 broke -unity-build's in which qfilesystemengine_unix.cpp ends up in the same unity_cxx_nn.cpp as qstorageinfo_linux.cpp.
While this affects only certain glibc's, Unbuntu 20.04 is affected. The internet suggests to not mix the two APIs in one executable, due to ODR violations (MS_ flags are #define'd in one and an enum in the other).
Reference:
- relates to
-
QTBUG-123932 qstorageinfo_linux.cpp:15:10: fatal error: linux/mount.h: No such file or directory
-
- Closed
-
For Gerrit Dashboard: QTBUG-119328 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
520291,1 | Unity-build: exclude qfilesystemengine_unix.cpp d/t linux/fs.h / sys/mount.h conflict | dev | qt/qtbase | Status: ABANDONED | +2 | 0 |
520554,6 | QStorageInfo/Linux: include linux/mount.h instead of sys/mount.h | dev | qt/qtbase | Status: MERGED | +2 | 0 |